fixed overlapping sidebar menu

--- a/django/static/web/css/custom.css
+++ b/django/static/web/css/custom.css
@@ -117,7 +117,7 @@ body {
 .nav-wrapper {
     min-height: 50px;
     position: relative;
-    z-index: 1;
+    z-index: 100;
 }
 
 
